[package]
name = "factor"
version = "1.1.0"
edition = "2021"
description = "A command-line program for listing the prime factors of a number or fraction"
license = "MIT"

[dependencies]
num = "0.4.0"
prime_factorization = "1.0.3"
radixal = "0.3.0"
thiserror = "1.0.40"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
